Feature:  Login and activation code implementation
